Rebase on codegen module.